myteo/test/analyze/name_resolution/traits/super_outside_method_error.exp
Error: The `super` keyword cannot be used outside a method
test/analyze/name_resolution/traits/super_outside_method_error.myte:4:14-19
 4 | val x1: Int = super
   |               ^^^^^

Error: The `super` keyword cannot be used outside a method
test/analyze/name_resolution/traits/super_outside_method_error.myte:7:2-7
 7 |   super;
   |   ^^^^^

Error: The `super` keyword cannot be used outside a method
test/analyze/name_resolution/traits/super_outside_method_error.myte:12:4-9
 12 |     super;
    |     ^^^^^